[tool.poetry]
name = "grte"
version = "0.1.0"
description = ""
authors = ["ArdaAras <ardaaras99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
transformers = "4.18.0"
jupyter = "^1.0.0"
numpy = "^1.19.2"
nltk = "^3.4.5"
scikit-learn = "^1.2.0"
optuna = "^3.0.5"
matplotlib = "^3.6.3"
pandas = "^1.5.2"
scipy = "^1.10.0"
seaborn = "^0.12.2"
latex = "^0.7.0"
torch = "2.0.0"
numba = "^0.58.1"
wandb = "^0.16.1"
adjusttext = "^0.8"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
poethepoet = "^0.13.1"
ruff = "^0.1.4"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
tox = "^4.11.3"
commitizen = "^3.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipykernel = "^6.26.0"

[tool.poetry.group.plot.dependencies]
matplotlib = "3.7.4"


[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.12"

[tool.ruff]
line-length = 150

[tool.ruff.format]
# Like Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.extend-per-file-ignores]
"*" = ["S101", "S301"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
